# SpydrPick

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  gwes_plot.r  plot.r
cmake/: disable_insource_builds.cmake  git_commit_info.cmake  set_default_build_type.cmake  spydrpick_options.cmake
include/: ARACNE.h  ARACNE.hpp  ARACNE_options.h  ARACNE_version.h  SpydrPick.h  SpydrPick.hpp  SpydrPick_options.h  SpydrPick_version.h  aracne.h  aracne.hpp  aracne_options.h  aracne_version.h  mi.hpp  mi_parameters.hpp  spydrpick_version.h
src/: ARACNE.cpp  ARACNE_options.cpp  CMakeLists.txt  SpydrPick.cpp  SpydrPick_options.cpp  aracne.cpp  aracne_options.cpp  mi_gwes.cpp
